Version 2.5.40dev:

* Enable screenshot bar for 1280x720 resolution.

Version 2.5.39dev:
* CD images for database games will now be extracted from archives on demand.
  (there will always be a temp copy made right now, even when not needed).
* If you give the launcher (command line) the path to a zip or lha, it will
  try to find a contained WHDLoad slave and configure an A600 + 8MB fast RAM
  and start FS-UAE.
* Updated Info.plist and specified 10.7.0 as minimum OS X version.
* Added version update check for beta branch.
* Imported updated translations from crowdin.com.

Version 2.5.38dev:

* Updated joystick configuration dialog.
* Save SDL 2.0 GUIDs (and more info) in the controller configurations.
* Configuration dialog: load builtin config if no user config exists.
* Imported updated translations from crowdin.com.

Version 2.5.37dev:

* Fixed bug in login window, added close buttons to login/logout.
* Fixed OAGD.net locker uploader (really, this time).
* Added new logging options panel to settings dialog.
* Imported updated translations from crowdin.com.

Version 2.5.35dev:

* Added All Games / All Configurations to drop-down.
* Nicer behavior when kickstart ROM for chosen model is missing.
* Moved more warnings and information to status bar.
* Fixed handling of downloadable games.
* Use Fusion QT style on all platforms by default.
* Default to Fusion Adwaita style variant when running under GNOME 3.
* Show warning icon in settings if option is overriden by configuration.
* Fixed OAGD.net locker uploader.
* New additional configuration page.
* Moved custom configuration (button) to additional config page.
* Removed some "noise" from custom configuration and advanced settings.

Version 2.5.34dev:

* Changed tab panel appearance on OS X to match other platforms.
* Renamed language prefs to appearance prefs, added launcher theme option.
* Close login dialog before opening database refresh dialog.