@@ -35,7 +35,7 @@ $ ./fs-uae-launcher
 About FS-UAE Launcher
 ---------------------
 
-FS-UAE Launcher is Copyright (C) 2012-2014 Frode Solheim.
+FS-UAE Launcher is Copyright (C) 2012-2015 Frode Solheim.
 
 This package is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free Software
