@@ -1,4 +1,4 @@
-Summary: FS-UAE Launcher Theme
+Summary: Theme
 Type: Choice
 Default: fusion
 Example: native
