@@ -35,7 +35,7 @@ class DatFile(object):
         self.load_data(f.read())
 
     def load_data(self, data):
-        if data.startswith("<"):
+        if data.startswith("<") or data.startswith("\uFEFF"):
             # assume XML
             self._load_xml(data)
         else:
